some fixes of JFrame